views: open context menus on extension actions on down arrow

These buttons have two modes: a context menu and an "activation", which usually
shows a popup but may also take an action on the page or similar. They
subclass MenuButton, so down-arrow is wired to activation instead of to opening
the menu by default. This change causes extension actions to always open their
context menu on down-arrow instead of activating, since otherwise the context
menu is keyboard-inaccessible.

Bug: 696268
Change-Id: If0f12c3ac5b1168cc74ea5df848ecf30d0662e09
Reviewed-on: https://chromium-review.googlesource.com/c/1286738
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600736}
Former-commit-id: 735437bf18ccbc24d73032e6bd3936a86dbef317