chrome/browser/ui/views/toolbar/toolbar_action_view.h
@@ -73,6 +73,7 @@ class ToolbarActionView : public views::MenuButton,
   std::unique_ptr<views::InkDrop> CreateInkDrop() override;
   std::unique_ptr<views::InkDropHighlight> CreateInkDropHighlight()
       const override;
+  bool OnKeyPressed(const ui::KeyEvent& event) override;
 
   // ToolbarActionViewDelegateViews:
   content::WebContents* GetCurrentWebContents() const override;
